tdf#161496 - Fix single ocPush tokens in LET function Name values

If the Name - Name Value pairs contains already an ocPush result
no need to interpret, so the Calculation parameter can reuse it.

Change-Id: I55465d674eb31aea7c3123c889250c9fa127f1fd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168661
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>